--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -1,4 +1,8 @@
 <div class="Wrapper">
-  <%= render "side_bar" %>
-  <%= render "main_chat" %>
+  <div class="side-bar">
+    <%= render "side_bar" %>
+  </div>
+  <div class="main-chat">
+    <%= render "main_chat" %>
+  </div>
 </div>
