--- a/app/assets/stylesheets/messages.css
+++ b/app/assets/stylesheets/messages.css
@@ -48,17 +48,63 @@
 .main-chat {
   width: calc(100vw - 300px);
 }
-
 .main-header {
   background-color: #ffffff;
   height: 100px;
   padding: 0px 40px;
+  display: flex;
+  justify-content: space-between;
+}
+.chat-overview {
+  font-size: 24px;
+  color: #333;
+  margin-top: 36px;
+}
+
+.chat-end-btn {
+  margin-top: 40px;
+}
+
+.chat-end-btn a {
+  border: 1px solid darkred;
+  padding: 20px;
+  color: darkred;
+  text-decoration: none;
 }
 
 .show-message {
   background-color: #fafafa;
   height: calc(100vh - 100px - 90px);
   padding: 46px 40px 0px;
+  overflow: scroll;
+}
+
+.message {
+  padding-bottom: 10px;
+}
+
+.upper-message {
+  display: flex;
+}
+
+.message-name {
+  font-size: 16px;
+  color: #434a54;
+}
+
+.message-date {
+  padding-left: 10px;
+  font-size: 12px;
+  color: #999;
+}
+
+.lower-message {
+  margin-top: 10px;
+  margin-bottom: 40px;
+}
+.message-text {
+  font-size: 14px;
+  color: #434a54;
 }
 
 .form {
@@ -66,4 +112,40 @@
   background-color: #dddddd;
   height: 90px;
   padding: 20px 40px;
+  display: flex;
+}
+
+.form-input {
+  width: 100%;
+  display: flex;
+  background-color: white;
+}
+
+.input-text {
+  padding-left: 10px;
+  border: none;
+  height: 50px;
+  width: 100%;
+}
+
+.message-send {
+  margin-left: 15px;
+  font-size: 16px;
+  color: white;
+  background-color: #38aef0;
+  height: 50px;
+  padding: 0px 20px;
+}
+.form-image {
+  font-size: 12px;
+  background-color: lightblue;
+  color: white;
+  padding: 12px;
+  width: 60px;
+  margin: 5px 10px;
+  text-align: center;
+}
+
+.hidden {
+  display: none;
 }
