--- a/app/views/messages/_side_bar.html.erb
+++ b/app/views/messages/_side_bar.html.erb
@@ -7,14 +7,11 @@
   </div>
 </div>
 <div class="side-chatrooms">
-  <div class="room">
-    <div class="room-name">
-      <a href="#">room1</a>
+  <% current_user.rooms.each do |room|%>
+    <div class="room">
+      <div class="room-name">
+        <a href="#"><%=room.name%></a>
+      </div>
     </div>
-  </div>
-  <div class="room">
-    <div class="room-name">
-      <a href="#">room2</a>
-    </div>
-  </div>
+  <% end %>
 </div>
