--- a/app/views/messages/_main_chat.html.erb
+++ b/app/views/messages/_main_chat.html.erb
@@ -1,39 +1,20 @@
 <div class="main-header">
-  <div class="chat-overview">渚のハイカラ
+  <div class="chat-overview"><%= @room.name %>
   </div>
   <div class="chat-end-btn">
     <a href="#">チャットを終了する</a>
   </div>
 </div>
 <div class="show-message">
-  <div class="message">
-    <div class="upper-message">
-      <div class="message-user">Tom</div>
-      <div class="message-date">2020/3/31(wed)12:44</div>
-    </div>
-    <div class="lower-message">
-      <div class="message-text">おはよう
-      </div>
-    </div>
-  </div>
-  <div class="message">
-    <div class="upper-message">
-      <div class="message-user">Tom</div>
-      <div class="message-date">2020/3/31(wed)12:44</div>
-    </div>
-    <div class="lower-message">
-      <div class="message-text">おはよう
-      </div>
-    </div>
-  </div>
+  <%= render partial: 'message', collection: @messages %>  
 </div>
-<div class="form">
+<%= form_with model: [@room, @message], class: 'form', local: true do |f| %>
   <div class="form-input">
-    <input type="text" class="input-text" placeholder="type a message">
+    <%= f.text_field :content, class: 'form-message', placeholder: 'type a message' %>
     <label class="form-image">
       <span class="image-file">画像</span>
-      <input type="file" class="hidden">
+      <%= f.file_field :image, class: 'hidden' %>
     </label>
   </div>
-  <input type="submit" class="message-send" value="送信">
-</div>
+  <%= f.submit '送信', class: 'form-submit' %>
+<% end %>
