--- a/app/views/messages/_side_bar.html.erb
+++ b/app/views/messages/_side_bar.html.erb
@@ -3,14 +3,14 @@
     <%= link_to current_user.name,edit_user_path(current_user)%>
   </div>
   <div class="chat-create-btn">
-  <a href="#">チャットを作成する</a>
+    <%= link_to "チャットを作成する",new_room_path%>
   </div>
 </div>
 <div class="side-chatrooms">
   <% current_user.rooms.each do |room|%>
     <div class="room">
       <div class="room-name">
-        <a href="#"><%=room.name%></a>
+        <%=link_to room.name,room_messages_path(room)%></a>
       </div>
     </div>
   <% end %>
