--- a/app/views/messages/_main_chat.html.erb
+++ b/app/views/messages/_main_chat.html.erb
@@ -2,7 +2,7 @@
   <div class="chat-overview"><%= @room.name %>
   </div>
   <div class="chat-end-btn">
-    <a href="#">チャットを終了する</a>
+    <%= link_to 'チャットを終了する',room_path(@room),method: :delete %>
   </div>
 </div>
 <div class="show-message">
